adding GetMembershipByUserAndCommunity and GetUsersByCommunityId
